fix: Add the Portal Visibility column to the API list + adapt filters & sort
https://gravitee.atlassian.net/browse/APIM-10651

--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.scss
@@ -160,6 +160,10 @@ div[gio-additional-filters] mat-form-field {
   width: 130px;
 }
 
+.portal-visibility-filter {
+  width: 156px;
+}
+
 .apply-visible-columns {
   display: block;
   margin: 0 auto;
